# flowhouse

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
dags/: health_check.py  sync_tasktracker_to_clickhouse.py
docs/: architecture.md  decisions.md
src/extract/: __init__.py  tasktracker.py
src/load/: __init__.py  clickhouse_loader.py
src/transform/: __init__.py  pandas_ops.py
tests/: test_clickhouse_integration.py  test_clickhouse_loader.py  test_extract_tasktracker.py  test_health_check_dag.py  test_pandas_ops.py  test_sync_dag.py
